--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-# Specify the minimum version of CMake required to build the project
 cmake_minimum_required(VERSION 3.10)
 
-# Set the project name
-project(MyProject)
+# Set the project name and version
+project(MyProject VERSION 1.0)
 
 # Set the C standard
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED True)
 
 # Add the source files
 set(SOURCE_FILES add.c average.c)
